<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_downloaded"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/downloaded"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/browse"
        app:showAsAction="never" />

</menu>
