<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_download_paper"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/download"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_favorite_paper"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share_paper"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete_paper"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="Delete Paper From Downloads"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>