...
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_file_download_black_24dp"
                android:backgroundTint="@color/favoriteColor"
                android:contentDescription="@string/download" />

            <ImageButton
                android:id="@+id/button_favorite_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_favorite_black_24dp"
                android:backgroundTint="@color/favoriteColor"
...
